Update 01. Setting and Basics.md

--- a/R/01. Setting and Basics.md
+++ b/R/01. Setting and Basics.md
@@ -1,1 +1,67 @@
+## 01. Setting and Basics
 
+### 작업 디렉토리 설정 및 환경 세팅
+
+```r
+setwd("c:/r_workdata")  # 작업 디렉토리 설정
+getwd()                  # 현재 작업 디렉토리 확인
+Sys.setlocale("LC_ALL", "Korean")  # 한글 설정
+```
+
+### 데이터 읽기 및 간단한 출력
+
+```r
+d1 = read.csv("야구성적.csv")  # CSV 파일 읽기
+d1  # 데이터 출력
+```
+
+### 패키지 설치 및 불러오기
+
+```r
+install.packages("lubridate")  # 날짜/시간 패키지 설치
+library(lubridate)
+
+install.packages("installr")  # R 업데이트 패키지 설치
+library(installr)
+
+check.for.updates.R()  # R 업데이트 확인
+install.R()  # R 업데이트 실행
+```
+
+### 간단한 출력 명령어
+
+```r
+print(1+1)  # 결과 출력
+1+1         # 자동 출력
+print(pi)   # 원주율 출력
+
+cat(1, ":", 'a', '\n', 2, ":", "b")  # 여러 자료 이어서 출력
+```
+
+### 데이터 타입 이해
+
+```r
+d1 = 100
+print(d1)
+class(d1)  # numeric
+
+d1 = '100'
+print(d1)
+class(d1)  # character
+```
+
+### 산술 연산자
+
+```r
+5/2    # 나누기(실수)
+5%%2   # 나머지
+5%/%2  # 몫
+```
+
+### 강제 형변환
+
+```r
+as.numeric('1') + as.numeric('2')  # 문자열을 숫자로 변환 후 더하기
+```
+
+---
