--- a/R/02. Vector and Factor.md
+++ b/R/02. Vector and Factor.md
@@ -1,1 +1,138 @@
+## 02. Vector and Factor
 
+### 벡터 생성 및 연산
+
+```r
+# 숫자형 벡터 생성
+a = 1
+a <- 2
+
+a = 1:20  # 범위 지정
+```
+
+```r
+a
+```
+
+```r
+a[1]
+a[5]
+```
+
+```r
+a = 3+(4*5)
+a
+```
+
+```r
+1+2; 2*3; 4/5
+2**3  # 거듭제곱
+```
+
+### 산술 연산자 설명
+
+```r
+# 산술연산자
+# +, -, *
+# 나누기: /, %/%, %%
+# / : 나누기 결과를 실수로 표현
+# %/% : 몫을 정수로 표현
+# %% : 나머지
+```
+
+```r
+5/2
+5%%2
+5%/%2
+```
+
+### 지수 표현
+
+```r
+10000
+10000000
+1ㄷ2  # 오타 있음 (수정 안 함)
+1e2
+3e-2
+```
+
+### 문자형과 강제 형변환
+
+```r
+'1'+'2'  # 오류 발생 예상
+```
+
+```r
+# 강제 형변환 : as.~
+as.numeric('1')+as.numeric("2")
+```
+
+### 문자형 데이터
+
+```r
+'first'
+
+first
+a=b
+first = 'a'
+first
+class(first)
+```
+
+### 진리값 (TRUE/FALSE) 연산
+
+```r
+# & : AND 연산 (모두 참인 경우)
+# | : OR 연산 (하나라도 참이면 참)
+# ! : NOT 연산 (반전)
+
+3&0
+3&-3
+0,3&-3  # 오타 있음 (수정 안 함)
+
+3|0
+0|0
+!0
+```
+
+### NA와 NULL
+
+```r
+# NA : 잘못된 값 (Not Applicable, Not Available)
+# NULL : 존재하지 않는 값
+
+cat(1,NA,2)
+cat(1,NULL,2)
+
+sum(1,NA,2)
+sum(1,NULL,2)
+```
+
+### Factor형 데이터
+
+```r
+t1 = read.csv('factor_test.txt')
+t1 = read.csv('factor_test.txt')
+t1
+t1 = read.csv('factor_test')
+t1 = read.csv("factor_test")
+t1 = read.csv("factor_test_txt")
+t1 = read.csv("factor_test.txt")
+d1 = read.csv("factor_test.txt")
+```
+
+```r
+setwd("c:/r_workdata")
+getwd()
+Sys.setlocale("LC_ALL","Korean")
+d1 = read.csv("factor_test.txt")
+d1
+```
+
+```r
+# 문제: 성별을 요약하시오
+s1 = factor(d1$sex)
+summary(s1)
+```
+
+---
