Update 03. Date and Time.md

--- a/R/03. Date and Time.md
+++ b/R/03. Date and Time.md
@@ -1,1 +1,89 @@
+## 03. Date and Time
+
+### 날짜와 시간 관련 기본 함수
+
+```r
+Sys.Date()  # 현재 날짜
+Sys.time()  # 현재 날짜와 시간
+```
+
+```r
+data()
+```
+
+```r
+"2025-03-12"
+class("2025-03-12")  # character 타입
+```
+
+### 날짜 변환
+
+```r
+# 문제: "2025-03-12"의 문자 데이터를 날짜 데이터로 변환하고 타입 확인
+c1 = as.Date.character("2025-03-12")
+class(c1)
+c1
+```
+
+```r
+# 다른 날짜 포맷 변환 예시
+as.Date("2023-03-10", format="%Y-%m-%d")
+```
+
+### 기준 일자 기준으로 날짜 계산
+
+```r
+as.Date(100, origin='2025-03-12')  # 기준일로부터 100일 후
+as.Date(-100, origin='2025-03-12')  # 기준일로부터 100일 전
+as.Date('2025-03-12')+100  # 기준일에 100일 더하기
+```
+
+### 날짜 시퀀스 생성
+
+```r
+# 2025-01-01부터 2025-12-31까지 하루씩 증가하는 날짜 생성
+seq(as.Date("2025-01-01"), as.Date("2025-12-31"), 1)
+```
+
+### 문자열 벡터 다루기
+
+```r
+v1 = c("사과", "배", "감", "포도", "귤")
+v1
+v1[-3]  # 3번째 요소 "감"을 제외하고 출력
+```
+
+### 날짜를 월/일 형식으로 변환
+
+```r
+# 2022년 전체 날짜 생성
+v1 = seq(as.Date("2022-01-01"), as.Date("2022-12-31"), 1)
+
+# 월/일 형식으로 변환하여 저장
+v2 = format(v1, "%m/%d")
+v2
+class(v2)
+```
+
+### 날짜 위치 확인 및 추가
+
+```r
+d1 = v1
+names(d1) = 1:length(d1)
+d1
+
+# 2월 28일 위치 확인
+d1[d1=="2022-02-28"]
+
+# 2월 29일 추가
+
+# d1을 문자열로 변환 후 59번째 뒤에 2월 29일 삽입
+d2 = append(as.character(d1), "2022-02-29", after=59)
+d2
+
+# 다시 날짜형으로 변환
+d3 = as.Date(d2)
+d3
+```
+
 
