--- a/R/04. Matrix and Array.md
+++ b/R/04. Matrix and Array.md
@@ -1,1 +1,145 @@
+## 04. Matrix and Array
 
+### 매트릭스 기본 생성
+
+```r
+m1 = matrix(c(1,2,3,4))  # 기본 4행 1열 매트릭스
+m1
+```
+
+```r
+m2 = matrix(c(1,2,3,4), nrow=2)  # 2행 2열
+m2
+```
+
+```r
+m3 = matrix(c(1,2,3,4), nrow=2, byrow = T)  # 행 우선 입력
+m3
+```
+
+```r
+m3 = matrix(c(1,2,3,4), 2, by=T)
+m3
+```
+
+### 매트릭스 인덱싱
+
+```r
+m3[1,1]  # 1행 1열
+m3[2,1]  # 2행 1열
+
+m3[,1]   # 1열 전체
+m3[1,]   # 1행 전체
+```
+
+### 매트릭스 추가 (행/열)
+
+```r
+m4 = matrix(c(1,2,3,4,5,6,7,8,9), 3, by=T)
+m4
+
+m4 = rbind(m4, c(11,12,13))  # 행 추가
+m4
+
+m4 = rbind(m4, c(15,16,17,18))  # 열 개수 초과 데이터는 버림
+m4
+
+m4 = cbind(m4, c(20,21,21))  # 열 추가
+m4
+
+m4 = rbind(m4, c(22,23,24))  # 다시 행 추가
+m4
+```
+
+### 매트릭스 행/열 이름 지정
+
+```r
+rownames(m4) = c(1,2,3,4,5,6)
+m4
+
+colnames(m4) = c("1st","2nd","3rd","4th")
+m4
+```
+
+### matrix 색인과 조건 검색
+
+```r
+m1 = matrix(1:20, 4, by=T)
+m1
+
+dimnames(m1) = list(c(1,2,3,4), c("a","b","c","d","e"))
+m1
+
+m1[2,3]  # 2행 3열
+m1[-3,]  # 3행 제외하고 출력
+
+m1 >= 10  # 10 이상 여부
+
+m1[m1>=10]  # 10 이상 원소 출력
+m1[m1[,"c"]>=10,]  # 'c'열에서 10 이상인 행 출력
+
+m1[m1[,"e"]==20,]  # 'e'열이 20인 행 전체 출력
+m1[m1[,"e"]==20, 3:5]  # 'e'열 20인 행의 3~5열만 출력
+```
+
+### 매트릭스 실습 문제
+
+```r
+no = c(1,2,3,4)
+name = c("apple","banana","peach","berry")
+price = c(500,200,200,50)
+qty = c(5,2,4,7)
+
+m1 = cbind(no, name, price, qty)
+m1
+```
+
+```r
+# peach 가격 출력
+m1[m1[,"name"]=="peach","price"]
+```
+
+```r
+# apple과 peach 데이터 출력
+m1[m1[,"name"]=="apple" | m1[,"name"]=="peach",]
+```
+
+```r
+# sales 컬럼 생성 (price * qty)
+sales = as.numeric(m1[,"price"])*as.numeric(m1[,"qty"])
+sales
+cbind(m1, sales)
+```
+
+```r
+# 첫 번째 컬럼 제거 후 행 번호 설정
+rownames(m1) = m1[,1]
+m1 = m1[,-1]
+m1
+```
+
+```r
+# qty가 5 이상인 과일 이름 출력
+m1[m1[,"qty"]>=5,"name"]
+```
+
+```r
+# 5번째 과일 추가 (mango, 100원, 10개)
+v1 = c("mango",100,10)
+m1 = rbind(m1,v1)
+rownames(m1)[5]=5
+m1
+```
+
+### Array 생성
+
+```r
+# 3차원 배열 생성 예시
+a1 = array(c(1:12), dim=c(4,3))
+a1
+
+a1 = array(c(1:12), dim=c(2,2,3))
+a1
+
+a1[1,1,3]  # 3번째 층의 1행 1열
+```
