--- a/R/05. DataFrame and List.md
+++ b/R/05. DataFrame and List.md
@@ -1,1 +1,156 @@
+## 05. DataFrame and List
 
+### 리스트(list) 생성 및 조작
+
+```r
+# 리스트 생성
+l1 = list(name = "홍길동",
+          addr = "서울",
+          tel = "010-1111-1111",
+          pay = 500)
+l1
+```
+
+```r
+# 특정 키 조회
+l1$addr
+```
+
+```r
+# 리스트에 요소 추가
+l1$birth = "2023"
+l1$birth
+
+# 리스트에 값 추가 (벡터 형태)
+l1$name = c("고길동", "마이콜")
+l1$name
+
+# 리스트에 추가 요소 삽입 (append 사용)
+l1$name[length(l1$name)+1] = "홍길동"
+l1$name
+
+l1$name = append(l1$name, "둘리", after=1)
+l1$name
+```
+
+```r
+# 리스트 값 삭제
+l1$name[length(l1$name)-1] = NA
+l1$name
+
+# 리스트 키 삭제
+l1$birth = NULL
+l1
+```
+
+### 데이터프레임(data.frame) 생성
+
+```r
+# 각 컬럼 생성 후 데이터프레임으로 합치기
+no = c(1,2,3,4)
+name = c("Apple", "Banana", "Peach", "Graph")
+price = c(500,200,100,300)
+qty = c(5,2,4,7)
+
+sales = data.frame(No=no, Name=name, Price=price, Qty=qty)
+sales
+class(sales)
+str(sales)
+```
+
+```r
+# 행렬로 데이터프레임 생성
+sales2 = matrix(c(1,"Apple",500,5,
+                  2,"Peach",200,2,
+                  3,"Banana",700,4,
+                  4,"Graph",100,7), 4, by=T)
+sales2
+
+d1 = data.frame(sales2)
+d1
+
+names(d1) = c("No","Name","Price","Qty")
+class(d1)
+str(d1)
+```
+
+### 데이터 조회
+
+```r
+sales
+sales$Name  # 특정 컬럼 조회
+sales[1,3]  # 1행 3열 조회
+sales[,2]   # 2열 전체 조회
+sales[3,]   # 3행 전체 조회
+sales[c(1,3),]  # 1행과 3행 조회
+sales[,c(2,4)]  # 2열과 4열 조회
+sales[,c(1:3)]  # 1~3열 조회
+```
+
+### 조건에 맞는 데이터 검색 (subset)
+
+```r
+subset(sales, qty <= 5)
+subset(sales, price == 200)
+subset(sales, name == "Apple")
+subset(sales, Name == "Apple")
+```
+
+### 데이터 추가 및 합치기 (rbind, cbind, merge)
+
+```r
+# 데이터프레임 추가 예시
+df1 = data.frame(No=c(1,2,3), Name=c("apple","banana","peach"), Price=c(100,200,300))
+df1
+
+df2 = data.frame(No=c(10,20,30), Name=c("train","car","ship"), Price=c(1000,2000,3000))
+df2
+
+# 열 단위 합치기
+cbind(df1, df2)
+
+# 행 단위 합치기
+rbind(df1, df2)
+
+# 공통 컬럼 기준으로 합치기
+merge(df1, df2)  # 공통 키 기준 내부 조인
+merge(df1, df2, all=T)  # 전체 외부 조인
+```
+
+```r
+# 새로운 데이터 추가 후 합치기
+df7 = data.frame(No=c(4,5), Name=c("mango","berry"), Price=c(400,500))
+df1 = rbind(df1, df7)
+df1
+```
+
+```r
+# 열 추가하기
+df1 = cbind(df1, qty=c(10,20,30,40,50))
+df1
+```
+
+### 특정 컬럼만 골라내기
+
+```r
+no = c(1,2,3,4,5)
+name = c("이순신","김유신","유관순","강감찬","안중근")
+addr = c("서울","대전","대구","부산","광주")
+tel = c(111,222,333,444,555)
+hobby = c("놀","먹","자","게","멍")
+
+mem = data.frame(No=no, Name=name, Addr=addr, Tel=tel, Hobby=hobby)
+mem
+
+# 일부 컬럼만 선택
+mem2 = subset(mem, select = c(No,Name,Tel))
+mem2
+
+# 특정 컬럼 제외하고 선택
+mem3 = subset(mem, select = -Tel)
+mem3
+
+# 컬럼명 변경
+colnames(mem3) = c("번호","이름","주소","취미")
+mem3
+```
