Update 07. User Defined Functions.md

--- a/R/07. User Defined Functions.md
+++ b/R/07. User Defined Functions.md
@@ -1,1 +1,75 @@
+## 07. User-Defined Functions
 
+### 사용자 정의 함수 기본 형태
+
+```r
+# 함수 기본 구조
+# 함수명 = function(인수 또는 입력값) {
+#   수식1
+#   수식2
+#   ...
+#   return(반환값)
+# }
+```
+
+### 입력값이 없는 함수
+
+```r
+my1 = function(){
+  return(10)
+}
+
+my1  # 함수 객체 확인
+my1()  # 함수 호출
+```
+
+### 입력값(인자)이 있는 함수
+
+```r
+my2 = function(a) {
+  b = a^2
+  return(b)
+}
+
+my2(3)  # 3의 제곱 = 9
+```
+
+### 입력값이 2개인 함수
+
+```r
+my3 = function(a,b){
+  c = abs(a-b)
+  return(c)
+}
+
+my3(2,3)  # 1 출력 (절댓값 차이)
+```
+
+### 조건문(if)을 사용하는 함수
+
+```r
+my4 = function(a,b) {
+  if (a > b) {
+    c = a - b
+  } else {
+    c = b - a
+  }
+  return(c)
+}
+
+my4(2,3)  # 1 출력
+```
+
+---
+
+### 정렬 관련 함수
+
+```r
+# sort() : 오름차순/내림차순 정렬
+
+s1 = Fruits$Sales
+s1
+
+sort(s1)  # 오름차순 정렬
+sort(s1, decreasing = T)  # 내림차순 정렬
+```
