Update 08. Graphs and Aggregation.md

--- a/R/08. Graphs and Aggregation.md
+++ b/R/08. Graphs and Aggregation.md
@@ -1,1 +1,42 @@
+## 08. Graphs and Aggregation
 
+### plyr 패키지 설치 및 불러오기
+
+```r
+install.packages("plyr")
+library(plyr)
+```
+
+### 데이터 준비
+
+```r
+f = read.csv("fruits_10.csv")
+f
+```
+
+### summarise 함수 사용
+
+```r
+# summarise : 기준 컬럼으로 그룹화 후 함수 적용 (SQL group by 유사)
+
+# 과일 이름별 판매량 합계와 가격 합계 구하기
+ddply(f, 'name', summarise, sum_qty = sum(qty), sum_price = sum(price))
+
+# 과일 이름별 최고 판매량과 최저 가격 구하기
+ddply(f, 'name', summarise, max_qty = max(qty), min_price = min(price))
+
+# 년도별, 과일 이름별 최고 판매량과 최저 가격 구하기
+ddply(f, c("year", "name"), summarise, max_qty = max(qty), min_price = min(price))
+```
+
+### transform 함수 사용
+
+```r
+# transform : 각 행별로 새로운 계산 결과를 추가할 때 사용
+
+# 각 과일별 판매수량 비율(pct_qty) 구하기
+ddply(f, "name", transform, sum_qty = sum(qty), pct_qty = qty*100/sum(qty))
+
+# 비율을 소수점 2자리로 반올림
+ddply(f, "name", transform, sum_qty = sum(qty), pct_qty = round(qty*100/sum(qty), 2))
+```
