Update 09. Data Input and Output.md

--- a/R/09. Data Input and Output.md
+++ b/R/09. Data Input and Output.md
@@ -1,1 +1,101 @@
+## 09. Data Input and Output
 
+### 파일 및 디렉토리 다루기
+
+```r
+setwd("c:/r_workdata/")  # 작업 디렉토리 설정
+Sys.setlocale("LC_ALL","Korean")  # 한글 설정
+
+list.files()  # 디렉토리 파일 목록 출력
+list.files(all.files = T)  # 숨김 파일 포함 목록 출력
+list.files(recursive = T)  # 하위 폴더 포함 목록 출력
+```
+
+### scan() 함수
+
+```r
+# 텍스트 파일 스캔하여 데이터 읽기
+
+s1 = scan("scan_1.txt")
+s1[1]
+
+s2 = scan("scan_2.txt", what = "")  # 문자열 데이터 읽기
+s2
+
+s3 = scan("scan_3.txt", what = "")
+s3
+
+s4 = scan("scan_4.txt", what = "")
+s4
+```
+
+```r
+# 콘솔에서 직접 입력 받기
+input = scan()
+input
+
+input = scan(what = "")
+input
+```
+
+### readline() 함수
+
+```r
+# 한 줄 입력 받기
+input2 = readline("R U OK?")
+input2
+```
+
+### readLines() 함수
+
+```r
+# 파일을 읽어 벡터 형태로 저장
+input5 = readLines("scan_4.txt")
+input5
+```
+
+### read.table() 함수
+
+```r
+# 데이터를 읽어 데이터프레임으로 저장
+# 기본적으로 컬럼명이 없다고 가정함
+
+f = read.table("fruits.txt", header = T)
+f
+```
+
+### read.csv() 함수
+
+```r
+# CSV 파일 읽기 (기본적으로 컬럼명이 있다고 가정)
+
+f3 = read.csv("fruits_3.csv")
+f3
+
+f4 = read.csv("fruits_4.csv", header = F)
+f4
+
+# 컬럼명 직접 지정
+lab = c("No", "Name", "Price", "Qty")
+f4 = read.csv("fruits_4.csv", header = F, col.names = lab)
+f4
+```
+
+### write.csv()와 write.table() 함수
+
+```r
+# 읽기와 반대 방향: 파일로 저장할 때 사용
+# read.csv() -> write.csv()
+# read.table() -> write.table()
+```
+
+### 추가 파일 읽기 예시
+
+```r
+t3 = read.table("csv_test.txt")
+t3
+
+# 구분자 쉼표 지정, 헤더 존재하는 파일 읽기
+t3 = read.table("csv_test.txt", sep = ",", header = T)
+t3
+```
