Update 06. Apply Functions.md

--- a/R/06. Apply Functions.md
+++ b/R/06. Apply Functions.md
@@ -1,1 +1,112 @@
+## 06. Apply Functions
+
+### 기본 함수 정리
+
+```r
+# 자주 사용되는 기본 함수
+# aggregate() : 다양한 함수를 사용하여 결과 출력
+# apply() : 행/열 단위로 함수 적용
+# cor() : 상관계수 계산
+# cumsum() : 누적 합
+# cumprod() : 누적 곱
+# diff() : 차분 계산
+# length() : 요소 갯수
+# max(), min() : 최대/최소값
+# mean(), median() : 평균/중앙값
+# order(), rank() : 정렬/순위
+# prod() : 누적 곱
+# range() : 범위
+# sd() : 표준편차
+# rev() : 역순
+# sort() : 정렬
+# summary() : 요약 통계
+# sweep() : 일괄 뺄셈
+# tapply() : 그룹별 연산
+# var() : 분산
+```
+
+### 벡터 기본 예제
+
+```r
+v1 = c(1,2,3,4,5)
+v2 = c('a','b','c','d','e')
+
+max(v1)
+max(v2)
+mean(v1)
+mean(v2)  # 문자형 평균 불가
+sd(v1)
+sum(v1)
+var(v1)
+```
+
+### aggregate() 함수
+
+```r
+# aggregate(출력 컬럼 ~ 기준 컬럼, 데이터, 함수)
+
+aggregate(Sales~Year, Fruits, sum)
+aggregate(Sales~Fruit, Fruits, max)
+aggregate(Sales~Fruit+Year, Fruits, max)
+```
+
+### apply() 함수
+
+```r
+m1 = matrix(c(1,2,3,4,5,6), 2, by=T)
+m1
+
+apply(m1, 1, sum)  # 행 기준 합계
+apply(m1, 2, sum)  # 열 기준 합계
+apply(m1[,c(2,3)], 2, max)  # 특정 열 최대값
+```
+
+### lapply()와 sapply() 함수
+
+```r
+# 리스트 형태 반환 vs 벡터 형태 반환
+
+l1 = list(Fruits$Sales)
+l2 = list(Fruits$Profit)
+
+lapply(c(l1,l2), max)
+sapply(c(l1,l2), max)
+
+# 데이터프레임에서도 사용 가능
+lapply(Fruits[,c(4,5)], max)
+sapply(Fruits[,c(4,5)], max)
+```
+
+### tapply() 함수
+
+```r
+# tapply(출력 값, 기준 컬럼, 함수)
+
+attach(Fruits)
+
+tapply(Sales, Fruit, sum)
+aggregate(Sales~Fruit, Fruits, sum)
+
+tapply(Sales, Year, sum)
+aggregate(Sales~Year, Fruits, sum)
+```
+
+### mapply() 함수
+
+```r
+v1 = c(1,2,3,4,5)
+v2 = c(10,20,30,40,50)
+v3 = c(100,200,300,400,500)
+
+mapply(sum, v1, v2, v3)
+```
+
+### 데이터프레임 apply 예제
+
+```r
+f1 = read.csv("data1.csv")
+View(f1)
+
+apply(f1[,c(2:15)], 2, sum)  # 열 합계
+apply(f1[,c(2:15)], 1, sum)  # 행 합계
 
