--- a/R/10. R 기본 그래프 실습 모음.md
+++ b/R/10. R 기본 그래프 실습 모음.md
@@ -1,1 +1,21 @@
+## 10. R 기본 그래프 실습 모음
+
+### plot 기본 형식
+
+```r
+# plot(x축데이터, 옵션)
+# plot(x축 , y축 , 옵션)
+
+v1 = c(2,2,2)
+plot(v1)
+
+# x축, y축
+x = 1:3
+y = 3:1
+plot(x,y)
+
+# x축, y축의 한계값 지정
+plot(x, y, xlim = c(1, 10), ylim = c(1, 5))
+
+```
 
