--- a/R/10. R 기본 그래프 실습 모음.md
+++ b/R/10. R 기본 그래프 실습 모음.md
@@ -3,19 +3,82 @@
 ### plot 기본 형식
 
 ```r
-# plot(x축데이터, 옵션)
-# plot(x축 , y축 , 옵션)
+#plot() : 분포도나 꺾은 선
+#plot(측축데이터, 옵션)
+#plot(x축데이터, 옵션)
+#plot(x축 , y축 , 옵션)
 
 v1 = c(2,2,2)
 plot(v1)
 
-# x축, y축
+# x축 , y축
 x = 1:3
+y = 3:1
+plot(x,y)
+
+# x축 , y축의 한계값 지정
+plot(x, y, xlim = c(1, 10), ylim = c(1, 5))
+
+# 축 제목 : xlab, ylab, main : 그래프 제목
+plot(x, y, xlim = c(1, 10), ylim = c(1, 5), xlab = "x축값", ylab = "", main = "PLOT TEST")
+
+# 축 제목 : xlab, ylab, main : 그래프 제목
+plot(x, y, xlim = c(1, 10), ylim = c(1, 5), xlab = "x축값", ylab = "", main = "PLOT TEST")
+
+plot.new()  # 창을 지우고 다시 그린다
+dev.new()   # 새로운 창에서 다시 그린다
+
+v1 = c(100,130,120,160,150)
+plot(v1, type = 'o', col = 'red', ylim = c(0, 200))
+
+```
+
+### 그래프에 색상과 제목, 축 꾸미기
+```r
 y = 3:1
 plot(x,y)
 
 # x축, y축의 한계값 지정
 plot(x, y, xlim = c(1, 10), ylim = c(1, 5))
 
+# 축 제목 : xlab, ylab, main : 그래프 제목
+plot(x, y, xlim = c(1, 10), ylim = c(1, 5), xlab = "x축값", main = "PLOT TEST")
+
+plot.new()  # 창을 지우고 다시 그린다
+dev.new()   # 새로운 창에서 다시 그린다
+
+v1 = c(100,130,120,160,150)
+plot(v1, type = 'o', col = 'red', ylim = c(0, 200), axes=F, ann = F)
+
+axis(1, at=1:5, lab=c('MON','TUE','WED','THU','FRI'))
+axis(2, ylim=c(0,200))
+
+title(main='FRUITS', col.main='red', font.main=4)
+title(xlab = 'DAY', col.lab='black')
+title(ylab = 'PRICE', col.lab='blue')
+```
+### 그래프의 배치조정 - mfrow
+```r
+# 그래프의 배치조정 : mfrow
+# par(mfrow = c(nr, nc))
+
+par(mfrow=c(3,3))
+plot(v1, type = 'b')  # 점선
+plot(v1, type = 's')  # 왼쪽 시작 계단형
+plot(v1, type = 'S')  # 오른쪽 시작 계단형
+plot(v1, type = 'l')  # 선
+plot(v1, type = 'p')  # 점
+plot(v1, type = 'o')  # "b"에서 점 생략
+plot(v1, type = 'o')  # 점과 선이 중첩
+plot(v1, type = 'h')  # 각 점에서 x축까지 수직선
+plot(v1, type = 'n')  # 축만 표현
+```
+### 그래프 여백 조정 및 기본 barplot
+```r
+barplot(v1)
+
+par(mfrow=c(1,1))
+a = c(1,2,3)
+plot(a, xlab='aaa')
 ```
 
