Update 10. R 기본 그래프 실습 모음.md

--- a/R/10. R 기본 그래프 실습 모음.md
+++ b/R/10. R 기본 그래프 실습 모음.md
@@ -73,12 +73,33 @@ plot(v1, type = 'o')  # 점과 선이 중첩
 plot(v1, type = 'h')  # 각 점에서 x축까지 수직선
 plot(v1, type = 'n')  # 축만 표현
 ```
-### 그래프 여백 조정 및 기본 barplot
+###  barplot() 및 par() 활용
 ```r
 barplot(v1)
 
 par(mfrow=c(1,1))
 a = c(1,2,3)
 plot(a, xlab='aaa')
+```
+###  그래프의 여백 조정
+```r
+# 그래프의 여백 조정
+# mgp = c(제목위치, 지표값위치, 지표선위치)
+par(mgp = c(2,1,0))
+plot(a, xlab='aaa')
+
+```
+###  여러 개의 그래프를 중첩으로 그리기
+```r
+# 여러 개의 그래프를 중첩으로 그리기
+# par(new = T), add = T
+v1=c(1,2,3,4,5)
+v2=c(5,4,3,2,1)
+v3=c(3,4,5,6,7)
+
+plot(v1, type = 's', col='red', ylim = c(1,5))
+par(new=T)
+plot(v2, type = 'o', col='blue', ylim = c(1,5))
+
 ```
 
