Update 10. R 기본 그래프 실습 모음.md

--- a/R/10. R 기본 그래프 실습 모음.md
+++ b/R/10. R 기본 그래프 실습 모음.md
@@ -59,7 +59,7 @@ title(ylab = 'PRICE', col.lab='blue')
 ```
 ### 그래프의 배치조정 - mfrow
 ```r
-# 그래프의 배치조정 : mfrow
+
 # par(mfrow = c(nr, nc))
 
 par(mfrow=c(3,3))
@@ -83,7 +83,7 @@ plot(a, xlab='aaa')
 ```
 ###  그래프의 여백 조정
 ```r
-# 그래프의 여백 조정
+
 # mgp = c(제목위치, 지표값위치, 지표선위치)
 par(mgp = c(2,1,0))
 plot(a, xlab='aaa')
@@ -91,7 +91,7 @@ plot(a, xlab='aaa')
 ```
 ###  여러 개의 그래프를 중첩으로 그리기
 ```r
-# 여러 개의 그래프를 중첩으로 그리기
+
 # par(new = T), add = T
 v1=c(1,2,3,4,5)
 v2=c(5,4,3,2,1)
@@ -102,4 +102,68 @@ par(new=T)
 plot(v2, type = 'o', col='blue', ylim = c(1,5))
 
 ```
+###  여러 개의 그래프를 중첩으로 그리기
+```r
+# par(new = T), add = T
+v1=c(1,2,3,4,5)
+v2=c(5,4,3,2,1)
+v3=c(3,4,5,6,7)
 
+plot(v1, type = 's', col='red', ylim = c(1,5))
+par(new=T)
+plot(v2, type = 'o', col='blue', ylim = c(1,5))
+par(new=T)
+plot(v3, type = 'l', col='green')
+
+```
+###  lines() 함수로 중첩 그래프 그리기
+```r
+plot(v1, type = 's', col='red', ylim = c(1, 10))
+lines(v2, type = 'o', col='blue', ylim = c(1,5))
+lines(v3, type = 'l', col='green', ylim = c(1,100))
+```
+###  범례 추가
+```r
+
+# legend(x축, y축, 내용, cex = 글자크기, col=색상, pch=크기, lty=선모양)
+
+legend(4,9,c('v1','v2','v3'), cex=0.9, col=c('red','blue','green'), lty=1)
+
+```
+###  barplot - 가로막대형 및 그룹 묶음 출력
+```r
+barplot(x)
+
+# 가로막대형
+barplot(x, horiz = T)
+
+# 그룹으로 묶어서 출력 ; beside=T
+x = matrix(c(5,4,3,2), 2)
+x
+barplot(x, beside = T, names=c(5,3), col=c('green','yellow'))
+
+# 그룹으로 묶어서 출력
+barplot(x, beside = T, names=c(5,3), col=c('green','yellow'), horiz = T)
+
+# 하나의 막대로 가로출력
+barplot(x, names=c(5,3), col=c('green','yellow'), horiz = T, xlim = c(0,12))
+
+```
+### barplot - data.frame을 활용한 그룹 출력
+```r
+v3=c(140,170,120,110,160)
+
+qty = data.frame(BANANA=v1, CHERRY=v2, ORANGE=v3)
+qty
+
+# barplot을 그룹으로 묶어서 출력할때는 반드시 출력대상이 matrix여야 한다
+class(qty)
+barplot(as.matrix(qty), main='FRUITS SALES', beside = T, col=rainbow(nrow(qty)), ylim=c(0, 400))
+legend(14, 400, c('MON','TUE','WED','THU','FRI'), cex=0.8, fill = rainbow(nrow(qty)))
+```
+### barplot - transpose 후 출력 및 범례 위치 조절
+```r
+t(qty)
+barplot(t(qty), main='FRUITS SALES', col=rainbow(length(qty)), ylim = c(0, 400), names.arg = c('MON','TUE','WED','THU','FRI'), cex.axis = 0.8, las = 2, cex=0.8, beside = T)
+legend(0.5, 300, names(qty), cex=0.8, fill = rainbow(length(qty)))
+```
