Update 10. R 기본 그래프 실습 모음.md

--- a/R/10. R 기본 그래프 실습 모음.md
+++ b/R/10. R 기본 그래프 실습 모음.md
@@ -20,10 +20,7 @@ plot(x,y)
 plot(x, y, xlim = c(1, 10), ylim = c(1, 5))
 
 # 축 제목 : xlab, ylab, main : 그래프 제목
-plot(x, y, xlim = c(1, 10), ylim = c(1, 5), xlab = "x축값", ylab = "", main = "PLOT TEST")
-
-# 축 제목 : xlab, ylab, main : 그래프 제목
-plot(x, y, xlim = c(1, 10), ylim = c(1, 5), xlab = "x축값", ylab = "", main = "PLOT TEST")
+plot(x, y, xlim = c(1, 10), ylim = c(1, 5), xlab = "x축값", ylab = "y축값", main = "PLOT TEST")
 
 plot.new()  # 창을 지우고 다시 그린다
 dev.new()   # 새로운 창에서 다시 그린다
