Update 10. R 기본 그래프 실습 모음.md

--- a/R/10. R 기본 그래프 실습 모음.md
+++ b/R/10. R 기본 그래프 실습 모음.md
@@ -4,9 +4,9 @@
 
 ```r
 #plot() : 분포도나 꺾은 선
-#plot(측축데이터, 옵션)
-#plot(x축데이터, 옵션)
-#plot(x축 , y축 , 옵션)
+#plot(y축데이터, 옵션) x축은 자동으로 1, 2, 3, ... / y축만 지정
+#plot(x축데이터, 옵션) y축은 생략되므로 오류 발생 가능성 있음 (거의 사용 안 함)
+#plot(x축 , y축 , 옵션) x축, y축 모두 직접 지정해서 그리는 가장 일반적인 형태
 
 v1 = c(2,2,2)
 plot(v1)
